# py-stewart-filmscreen

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: protocol.md
stewart_filmscreen/: __init__.py  client.py  const.py  exceptions.py  ha_bridge.py  models.py  protocol.py  transport.py
tests/: conftest.py  test_client.py  test_ha_bridge.py  test_integration_real.py  test_protocol.py
